--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "sonner": "^2.0.1",
     "supabase": "^2.19.7",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
